// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateShadowNodeH can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char ArrayPropsNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <ArrayPropsNativeComponentView> component.
 */
using ArrayPropsNativeComponentViewShadowNode = ConcreteViewShadowNode<
    ArrayPropsNativeComponentViewComponentName,
    ArrayPropsNativeComponentViewProps,
    ArrayPropsNativeComponentViewEventEmitter,
    ArrayPropsNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char BooleanPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <BooleanPropNativeComponentView> component.
 */
using BooleanPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    BooleanPropNativeComponentViewComponentName,
    BooleanPropNativeComponentViewProps,
    BooleanPropNativeComponentViewEventEmitter,
    BooleanPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char ColorPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <ColorPropNativeComponentView> component.
 */
using ColorPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    ColorPropNativeComponentViewComponentName,
    ColorPropNativeComponentViewProps,
    ColorPropNativeComponentViewEventEmitter,
    ColorPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'DimensionPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char DimensionPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <DimensionPropNativeComponentView> component.
 */
using DimensionPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    DimensionPropNativeComponentViewComponentName,
    DimensionPropNativeComponentViewProps,
    DimensionPropNativeComponentViewEventEmitter,
    DimensionPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char EdgeInsetsPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <EdgeInsetsPropNativeComponentView> component.
 */
using EdgeInsetsPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    EdgeInsetsPropNativeComponentViewComponentName,
    EdgeInsetsPropNativeComponentViewProps,
    EdgeInsetsPropNativeComponentViewEventEmitter,
    EdgeInsetsPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char EnumPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <EnumPropNativeComponentView> component.
 */
using EnumPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    EnumPropNativeComponentViewComponentName,
    EnumPropNativeComponentViewProps,
    EnumPropNativeComponentViewEventEmitter,
    EnumPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char EventNestedObjectPropsNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <EventNestedObjectPropsNativeComponentView> component.
 */
using EventNestedObjectPropsNativeComponentViewShadowNode = ConcreteViewShadowNode<
    EventNestedObjectPropsNativeComponentViewComponentName,
    EventNestedObjectPropsNativeComponentViewProps,
    EventNestedObjectPropsNativeComponentViewEventEmitter,
    EventNestedObjectPropsNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char EventPropsNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <EventPropsNativeComponentView> component.
 */
using EventPropsNativeComponentViewShadowNode = ConcreteViewShadowNode<
    EventPropsNativeComponentViewComponentName,
    EventPropsNativeComponentViewProps,
    EventPropsNativeComponentViewEventEmitter,
    EventPropsNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char FloatPropsNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <FloatPropsNativeComponentView> component.
 */
using FloatPropsNativeComponentViewShadowNode = ConcreteViewShadowNode<
    FloatPropsNativeComponentViewComponentName,
    FloatPropsNativeComponentViewProps,
    FloatPropsNativeComponentViewEventEmitter,
    FloatPropsNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char ImagePropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <ImagePropNativeComponentView> component.
 */
using ImagePropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    ImagePropNativeComponentViewComponentName,
    ImagePropNativeComponentViewProps,
    ImagePropNativeComponentViewEventEmitter,
    ImagePropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char IntegerPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <IntegerPropNativeComponentView> component.
 */
using IntegerPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    IntegerPropNativeComponentViewComponentName,
    IntegerPropNativeComponentViewProps,
    IntegerPropNativeComponentViewEventEmitter,
    IntegerPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char MultiNativePropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <MultiNativePropNativeComponentView> component.
 */
using MultiNativePropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    MultiNativePropNativeComponentViewComponentName,
    MultiNativePropNativeComponentViewProps,
    MultiNativePropNativeComponentViewEventEmitter,
    MultiNativePropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char NoPropsNoEventsNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <NoPropsNoEventsNativeComponentView> component.
 */
using NoPropsNoEventsNativeComponentViewShadowNode = ConcreteViewShadowNode<
    NoPropsNoEventsNativeComponentViewComponentName,
    NoPropsNoEventsNativeComponentViewProps,
    NoPropsNoEventsNativeComponentViewEventEmitter,
    NoPropsNoEventsNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char ObjectPropsNativeComponentComponentName[];

/*
 * \`ShadowNode\` for <ObjectPropsNativeComponent> component.
 */
using ObjectPropsNativeComponentShadowNode = ConcreteViewShadowNode<
    ObjectPropsNativeComponentComponentName,
    ObjectPropsNativeComponentProps,
    ObjectPropsNativeComponentEventEmitter,
    ObjectPropsNativeComponentState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char PointPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <PointPropNativeComponentView> component.
 */
using PointPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    PointPropNativeComponentViewComponentName,
    PointPropNativeComponentViewProps,
    PointPropNativeComponentViewEventEmitter,
    PointPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateShadowNodeH can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "ShadowNodes.h": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeH.js
 */

#pragma once

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>
#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/RNCodegenModuleFixtures/States.h>
#include <react/renderer/components/view/ConcreteViewShadowNode.h>
#include <jsi/jsi.h>

namespace facebook {
namespace react {

JSI_EXPORT extern const char StringPropNativeComponentViewComponentName[];

/*
 * \`ShadowNode\` for <StringPropNativeComponentView> component.
 */
using StringPropNativeComponentViewShadowNode = ConcreteViewShadowNode<
    StringPropNativeComponentViewComponentName,
    StringPropNativeComponentViewProps,
    StringPropNativeComponentViewEventEmitter,
    StringPropNativeComponentViewState>;

} // namespace react
} // namespace facebook
",
}
`;
